--- a/index.html
+++ b/index.html
@@ -4,21 +4,51 @@
   <link rel="stylesheet" type="text/css" href="assets\css\reset.css">
   <link rel="stylesheet" type="text/css" href="assets\css\style.css">
 
-<head></head>
-<body>
-    <h1>Leah Forbes</h1>
-  <p align="right"><a href="index.html">About</a> | <a href="portfolio.html">Portfolio</a> | <a href="contact.html">Contact</a></p>
-<div class="jumbotron">
+<head>
+</style>
+</head>
+<body background-color=lightblue>
+  <meta charset="utf-8">
+  <title>My First Website</title>
+  <!-- Bootstrap CDN -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+</head>
 
-<div id="content">
-    <h2>About Me</h1>
-    <hr>
-    <div id="picture">
-		<img src="assets/images/Eric and Leah.jpg" alt="ProfilePicture" width="275" height="275">
-  </div>
-  <div class=Intro>
-    <p>Leah Le Forbes is a busy working mother of three.  Proud wife of Eric S. Forbes, Executive Director of Public Works for Fairfax County.  Work as a SharePoint Developer at NGA, National Geospatial Agency.  Where she developes SharePoint sites, while eating cake. Her secret to staying in shape is to eat your deserts for breakfast.  Always wear heels to work those calves and walk like you're on a mission to grab free food.  Drink hot tea and brush after every meal!</p>
-  </header>
-  </div>
+
+<body>
+  <div class="container">
+    <div class="jumbotron">
+    <div class="row">
+      <div class="col-lg-12">
+    <h1>Leah Forbes</h1>
+     <p align="right">
+     <a href="index.html">About</a>
+     <a href="portfolio.html">Portfolio</a>
+     <a href="contact.html">Contact</a></p>
 </div>
+</div>
+</div>
+</div>
+
+
+<div class="container">
+
+    <h3>About Me</h3>
+
+    <hr>
+
+    <div class="container">
+          <div class="row">
+            <div class="col-lg-4">
+            <img class="img img-thumbnail" src="assets/images/Eric and Leah.jpg" alt="Eric and Leah">
+          </div>
+          <div class="col-lg-8">
+            <p>Leah Le Forbes is a busy working mother of three.  Proud wife of Eric S. Forbes, Executive Director of Public Works for Fairfax County.  Work as a SharePoint Developer at NGA, National Geospatial Agency.  Where she developes SharePoint sites, while eating cake. Her secret to staying in shape is to eat your deserts for breakfast.  Always wear heels to work those calves and walk like you're on a mission to grab free food.  Drink hot tea and brush after every meal! Try to get up and walk around every hour or so.  Smile often --- this gets people wonering ;) And always remember to pay it forward.</p>
+          </div>
+
+</div>
+</div>
+</div>
+
+<footer class="container-fluid bg-4 text-center"> </footer>
 </body>
