--- a/portfolio.html
+++ b/portfolio.html
@@ -4,14 +4,31 @@
   <link rel="stylesheet" type="text/css" href="assets\css\reset.css">
   <link rel="stylesheet" type="text/css" href="assets\css\style.css">
 
-<head></head>
-<body>
-    <h1>Leah Forbes</h1>
-  <p align="right"><a href="index.html">About</a> | <a href="portfolio.html">Portfolio</a> | <a href="contact.html">Contact</a></p>
-<div class="jumbotron">
+  <head>
+    <meta charset="utf-8">
+    <title>My First Website</title>
+    <!-- Bootstrap CDN -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+</head>
 
+  <body>
+    <div class="container">
+      <div class="jumbotron">
+      <div class="row">
+        <div class="col-lg-12">
+      <h1>Leah Forbes</h1>
+       <p align="right">
+       <a href="index.html">About</a>
+       <a href="portfolio.html">Portfolio</a>
+       <a href="contact.html">Contact</a></p>
+  </div>
+  </div>
+  </div>
+  </div>
+
+<div class="container">
 <h1>Portfolio</h1>
-<br>
+<hr>
 <style>
 * {
     box-sizing: border-box;
@@ -32,13 +49,57 @@
 
 }
 
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+    font-family: Arial;
+    font-size: 10px;
+}
+
+.container {
+    position: relative;
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.container img {vertical-align: middle;}
+
+.container .content {
+    position: absolute;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.5); /* Black background with transparency */
+    color: #f1f1f1;
+    width: 92%;
+    padding: 15px;
+}
+</style>
+</head>
+<body>
+
 </style>
 </head>
 <body background-color=lightblue>
+<div class="container">
 <div class="row">
+  <div class="col-lg-6"
   <div class="column">
+    <div class="container">
     <img src="assets/images/Eric and Hudson.jpg" alt="Father and Son" style="width:100%">
+<div class="content">
+  <h6>Father and Son</h6>
+  <p>Eric and Hudson taking a lesiure stoll at Manassas Battlefield, VA.</p>
   </div>
+  </div>
+  </div>
+  </div>
+  </div>
+
+
   <div class="column">
     <img src="assets/images/Mommy and Hudson.jpg" alt="Mother and Son" style="width:100%">
   </div>
