--- a/Index.html
+++ b/Index.html
@@ -15,9 +15,9 @@
     <div class="container">
       <a href="index.html" id="logo">Leah Forbes</a>
       <nav>
-        <a href="Leahndex.html">About</a>
-        <a href="LeahPortfolioportfolio.html">Portfolio</a>
-        <a href="LeahContact.html">Contact</a>
+        <a href="Index.html">About</a>
+        <a href="Portfolio.html">Portfolio</a>
+        <a href="Contact.html">Contact</a>
       </nav>
     </div>
   </header>
