--- a/Portfolio.html
+++ b/Portfolio.html
@@ -15,9 +15,9 @@
       <a href="index.html" id="logo">Leah Forbes</a>
       <background ="light gray">
       <nav>
-        <a href="LeahIndex.html">About</a>
-        <a href="LeahPortfolio.html">Portfolio</a>
-        <a href="LeahContact.html">Contact</a>
+        <a href="Index.html">About</a>
+        <a href="Portfolio.html">Portfolio</a>
+        <a href="Contact.html">Contact</a>
       </nav>
     </div>
   </header>
@@ -50,7 +50,7 @@
         <img src="assets/images/Hudson on Chair.jpg" alt="Baby Model">
         <h3>Baby Model</h3>
       </div>
-      
+
 
       <div class="work">
         <img src="assets/images/Hudson Smile.jpg" alt="Happy Hudson">
