--- a/Contact.html
+++ b/Contact.html
@@ -14,9 +14,9 @@
     <div class="container">
       <a href="index.html" id="logo">Leah Forbes</a>
       <nav>
-        <a href="Index.html">About</a>
-        <a href="Portfolio.html">Portfolio</a>
-        <a href="Contact.html">Contact</a>
+        <a href="index.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
       </nav>
     </div>
   </header>
