--- a/Portfolio.html
+++ b/Portfolio.html
@@ -15,9 +15,9 @@
       <a href="index.html" id="logo">Leah Forbes</a>
       <background ="light gray">
       <nav>
-        <a href="Index.html">About</a>
-        <a href="Portfolio.html">Portfolio</a>
-        <a href="Contact.html">Contact</a>
+        <a href="index.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
       </nav>
     </div>
   </header>
